layout.pug navbar looking good. lets do the view jobs page now

--- a/final/views/layout.pug
+++ b/final/views/layout.pug
@@ -10,17 +10,17 @@ html
 
   body
     nav#navBar
-      h1 Burrow
+      h1 Burrow Report
       ul
-        li
+        li.linkList
           a(href="#") Jobs
-        li
+        li.linkList
           a(href="#") Production
-        li
+        li.linkList
           a(href="#") Locates
-        li
+        li.linkList
           a(href="#") Logout
-      h2(id="toggleButton", onclick="window.toggleNavBar()") <
+    img(id="toggleButton", onclick="window.toggleNavBar()", src="/images/icons/caret-square-left.svg")
 
 
 
