--- a/final/public/stylesheets/layout.css
+++ b/final/public/stylesheets/layout.css
@@ -1,29 +1,63 @@
+:root {
+  /* dark */
+  --color-1: #5B616A;
+  /* blue */
+  --color-2: #275DAD;
+  /* purple */
+  --color-3: #ABA9C3;
+  /* light blue */
+  --color-4: #CED3DC;
+  /* whiteish */
+  --color-5: #FCF7F8;
+  /* darker */
+  --color-6: #2F3237;
+}
+
 html {
   font-family: Roboto, sans-serif;
+  background-color: var(--color-5);
 }
 
 ul {
   list-style-type: none;
+  padding: 0;
+  margin-top: 23vh;
+}
+
+.linkList {
+  margin-top: 25px;
+  border: 1px solid var(--color-5);
 }
 
 nav h1 {
   font-size: 4ch;
-  text-align: right;
+  font-weight: bold;
+  color: var(--color-6);
+  text-align: center;
+  background-color: var(--color-3);
+  margin: 0;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  width: 100%;
 }
 
-nav h2 {
-  position: relative;
-  bottom: -70%;
+#toggleButton {
+  height: 75px;
+  position: fixed;
+  bottom: 5%;
+  left: 0%;
   font-size: 5ch;
+  background-color: var(--color-3);
 }
 
 li a {
   display: block;
   padding: 8px 16px;
   text-decoration: none;
-  color: white;
-  background-color: black;
+  color: var(--color-5);
+  background-color: var(--color-2);
   font-size: 4ch;
+  text-align: right;
 }
 
 li a.active {}
@@ -48,6 +82,7 @@ li a.active {}
 }
 
 nav {
+  width: 20%;
   display: flex;
   flex-direction: column;
   align-content: flex-start;
@@ -59,7 +94,7 @@ nav {
   left: 0;
   height: 100%;
   overflow: auto;
-  background-color: gray;
+  background-color: var(--color-1);
   align-items: center;
 
 }
