viewJobs coming together

--- a/final/views/layout.pug
+++ b/final/views/layout.pug
@@ -13,11 +13,11 @@ html
       h1 Burrow Report
       ul
         li.linkList
-          a(href="#") Jobs
+          a(href="/viewJobs") Jobs
         li.linkList
-          a(href="#") Production
+          a(href="/viewProduction") Production
         li.linkList
-          a(href="#") Locates
+          a(href="/viewLocates") Locates
         li.linkList
           a(href="#") Logout
     img(id="toggleButton", onclick="window.toggleNavBar()", src="/images/icons/caret-square-left.svg")
