--- a/final/views/viewJobs.pug
+++ b/final/views/viewJobs.pug
@@ -16,6 +16,8 @@ block content
         img(src="/images/icons/hard-hat-solid.svg").viewProductionIcon
         a(href="#").viewTickets View Tickets
         img(src="/images/icons/ticket.png").viewTicketsIcon
+        a(href="#").downloadPrints Download Print
+        img(src="/images/icons/download.png").downloadPrintsIcon
 
 block scripts
   script(src="/scripts/viewJobs.js")
