boilerplate for inputProduction almost done

--- a/final/views/viewJobs.pug
+++ b/final/views/viewJobs.pug
@@ -20,4 +20,4 @@ block content
         img(src="/images/icons/download.png").downloadPrintsIcon
 
 block scripts
-  script(src="/scripts/viewJobs.js")
+  script(src="/packed/viewJobs.js")
