route has pages and now the pug sends a global variable with that info to the js script

--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -25,4 +25,7 @@ block content
     label(for="vaultSelect", id="vaultLabel") Size
 
 block scripts
+  script.
+    jobNamePug="#{jobName}"
+    pageNumberPug="#{pageNumber}"
   script(src="/packed/inputProduction.js", type="text/javascript")
