removed onclicks from pug and also updated clearSelf() on MapLine so it can clear even with less than 2 points

--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -11,7 +11,8 @@ block content
     button(onclick="window.addBoreStart()")#addBore Bore
     button(onclick="window.addRockStart()")#addRock Rock
     button(onclick="window.addVaultStart()")#addVault Vault
-    button(onclick="window.cancelClick()")#cancel Cancel
+    // button(onclick="window.cancelClick()")#cancel Cancel
+    button#cancel Cancel
     button#submit Submit
     input(id="dateInput", type="date")
     input(id="footageInput", type="number")
