inputProduction route now pushes the bores, vaults, and rocks for that page to the inputProduction public/scripts

--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -29,4 +29,6 @@ block scripts
   script.
     jobNamePug="#{jobName}"
     pageNumberPug="#{pageNumber}"
+    vaultsJSON="#{vaults}"
+    boresAndRocksJSON="#{boresAndRocks}"
   script(src="/packed/inputProduction.js", type="text/javascript")
