logging in functions working nicely. now we have two cookies that show whether user is admin & crew name

--- a/final/views/layout.pug
+++ b/final/views/layout.pug
@@ -19,8 +19,8 @@ html
         li.linkList
           a(href="/viewLocates") Locates
         li.linkList
-          a(href="#") Logout
-    img(id="toggleButton", onclick="window.toggleNavBar()", src="/images/icons/caret-square-left.svg")
+          a(href="#", onclick="logout();") Logout
+    img(id="toggleButton", onclick="toggleNavBar()", src="/images/icons/caret-square-left.svg")
 
 
 
