changed css so the control panels can be clicked through while the child elements cannot

--- a/final/public/stylesheets/inputProduction.css
+++ b/final/public/stylesheets/inputProduction.css
@@ -2,6 +2,14 @@
   height: 100%;
 }
 
+.control {
+  pointer-events: none;
+}
+
+.controlChild {
+  pointer-events: auto;
+}
+
 #controls {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
