--- a/final/public/stylesheets/viewJobs.css
+++ b/final/public/stylesheets/viewJobs.css
@@ -15,6 +15,8 @@
   border-radius: 25%;
 }
 
+
+
 .jobContainer {
   display: grid;
   /* grid-template-rows: 30% 20% 20% 20%; */
@@ -62,9 +64,53 @@
   grid-column: 1;
 }
 
-.addProductionIcon {
+.addProductionContainer {
   grid-row: 2;
   grid-column: 2;
+  position: relative;
+  display: inline-block;
+}
+
+.dropdownPageLinks {
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 101;
+  background-color: var(--color-4);
+}
+
+
+.showPageLinks {
+  opacity: 100 !important;
+  pointer-events: auto !important;
+}
+
+.pageLink {
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  color: var(--color-6) !important;
+  text-align: center !important;
+  font-size: 5ch !important;
+  border: 1px solid black;
+}
+
+.pageLink:active {
+  background-color: var(--color-3);
+  color: white;
+}
+
+.addProductionIcon {
+  height: 75px;
+  background-color: var(--color-5);
+  margin: 10px;
+  border-radius: 25%;
+  display: block !important;
+  margin: auto !important;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
 }
 
 .viewProduction {
