--- a/final/views/viewJobs.pug
+++ b/final/views/viewJobs.pug
@@ -14,9 +14,8 @@ block content
         div.addProductionContainer
           img(src="/images/icons/plus-square.svg", onclick=`togglePageLinks('${job.job_name}')`).addProductionIcon
           div.dropdownPageLinks
-            a(href="#").pageLink SH2
-            a(href="#").pageLink SH3
-            a(href="#").pageLink SH4
+            each page in job.pages
+              a(href=`/inputProduction/${job.job_name}/${page}`).pageLink SH#{page}
         a(href="#").viewProduction View Production
         img(src="/images/icons/hard-hat-solid.svg").viewProductionIcon
         a(href=`/viewTickets/${job.job_name}`).viewTickets View Tickets
