--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -29,253 +29,9 @@ block content
     h1#movementHeader SH#{pageNumber} 
   div#boreLogContainer
     h1#boreLogHeader BORE LOG
-    div#inputContainersLEFT.inputContainer
-      div.ftinContainer
-        h1.counter  &nbsp;10-
-        input(type="number").ftInput
-        p.ftText '
-        input(type="number").inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  &nbsp;20-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  &nbsp;30-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  &nbsp;40-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  &nbsp;50-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  &nbsp;60-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  &nbsp;70-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  &nbsp;80-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  &nbsp;90-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  100-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  110-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  120-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  130-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  140-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  150-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  160-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  170-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  180-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  190-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  200-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  210-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  220-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  230-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  240-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  250-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  260-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  270-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  280-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  290-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  300-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  200-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  210-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  220-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  230-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  240-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  250-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  260-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  270-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  280-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  290-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
-      div.ftinContainer
-        h1.counter  300-
-        input.ftInput
-        p.ftText '
-        input.inInput
-        p.inText "
+    div#inputContainer.inputContainer
+    button#boreLogSubmit Submit
+    button#boreLogCancel Cancel
 
 
 block scripts
