--- a/final/views/viewTickets.pug
+++ b/final/views/viewTickets.pug
@@ -1,16 +1,13 @@
 extends layout.pug
 
 block style
+  meta(name="viewport", content="user-scalable=no")
+  link(rel="stylesheet", href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css", integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==", crossorigin="")
   link(rel="stylesheet", href="/stylesheets/viewTickets.css")
 
 
 block content
-  h1 testing
-  l2 #{jobName}
-  each ticket in tickets
-    h1 #{ticket.ticket_number}
-    h2 #{ticket.city}
-
+  div#map
 
 block scripts
   script.
