--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -27,6 +27,10 @@ block content
     img(src="/images/icons/forward.svg")#forward.movementArrow.controlChild
     img(src="/images/icons/backward.svg")#backward.movementArrow.controlChild
     h1#movementHeader SH#{pageNumber} 
+  div#boreLogContainer
+    div#inputs
+    button#boreLogSubmit Submit
+    button#boreLogCancel Cancel
 
 block scripts
   script.
