--- a/final/public/stylesheets/inputProduction.css
+++ b/final/public/stylesheets/inputProduction.css
@@ -279,13 +279,13 @@ label {
   background-color: var(--color-4);
   top: 10%;
   right: 15%;
-  display: flex;
+  display: none;
   flex-direction: column;
   grid-template-columns: 50% 50%;
 }
 
 #inputs {
-  display: flex;
+  display: grid;
   flex-direction: column;
   /* flex-wrap: wrap; */
   overflow-y: auto;
@@ -397,4 +397,33 @@ label {
   /* margin-bottom: var(--borelog-gap); */
   display: inline-flex;
   align-items: center;
+}
+
+#boreLogSubmit {
+  margin-top: auto;
+  margin-bottom: 10px;
+  background-color: green;
+}
+
+#boreLogCancel {
+  background-color: red;
+  margin-bottom: 10px;
+}
+
+#boreLogSubmit:active {
+  background-color: black;
+  color: white;
+}
+
+#boreLogCancel:active {
+  background-color: black;
+  color: white;
+}
+
+#boreLogContainer button {
+  font-size: 5ch;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
 }
