--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -11,6 +11,7 @@ block content
     button(onclick="window.addBoreStart()")#addBore.controlChild Bore
     button(onclick="window.addRockStart()")#addRock.controlChild Rock
     button(onclick="window.addVaultStart()")#addVault.controlChild Vault
+    button(onclick="window.toggleBoreLog()")#boreLogToggle.controlChild Bore Log
     button#cancel.controlChild Cancel
     button#submit.controlChild Submit
     input(id="dateInput", type="date", class="controlChild")
