editLine now working.. we should probably refactor it but well do it in amster

--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -30,8 +30,8 @@ block content
     h1#movementHeader SH#{pageNumber} 
   div#boreLogContainer
     div#inputs
-    button#boreLogSubmit Submit
-    button#boreLogCancel Cancel
+    button#boreLogSubmit Save
+    button#boreLogCancel Delete
 
 block scripts
   script.
