--- a/final/public/stylesheets/viewTickets.css
+++ b/final/public/stylesheets/viewTickets.css
@@ -1,3 +1,67 @@
 #map {
   height: 100%;
 }
+
+#infoPopup {
+  display: flex;
+  flex-direction: column;
+}
+
+.popupTicketNumber {
+  text-align: center;
+  font-size: 5ch;
+}
+
+.responseTable {
+  width: 95%;
+  margin: auto;
+  border-collapse: collapse;
+}
+
+.responseTable input {
+  width: 50px;
+  height: 50px;
+}
+
+.responseTable tr {}
+
+.responseTable td {
+  font-size: 2.5ch;
+  padding: 40px;
+  text-align: center;
+}
+
+.responseTable th {
+  font-size: 4ch;
+}
+
+.leaflet-popup {
+  width: 60vw;
+  height: fit-content;
+}
+
+.leaflet-popup-content-wrapper {
+  height: 100%;
+  width: 100%;
+  padding-bottom: 20px !important;
+}
+
+.leaflet-popup-content {
+  height: 100%;
+  width: 100% !important;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+}
+
+.pending {
+  background-color: #fdfd7f;
+}
+
+.clear {
+  background-color: lightgreen;
+}
+
+.noResponse {
+  background-color: #ff8383;
+}
