clear filter button looking good

--- a/final/views/viewTickets.pug
+++ b/final/views/viewTickets.pug
@@ -8,6 +8,9 @@ block style
 
 block content
   div#map
+  div#controls.control
+    h1#filterHeader.controlChild UTILITY_NAME
+    button(onclick="clearUtilityFilter()")#clearFilterButton.controlChild Clear Filter
 
 block scripts
   script.
