lot of work ahead of us i think

--- a/final/views/inputProduction.pug
+++ b/final/views/inputProduction.pug
@@ -40,5 +40,6 @@ block scripts
     vaultsJSON="#{vaults}"
     boresAndRocksJSON="#{boresAndRocks}"
     totalPagesForJobPug="#{totalPagesForJob}"
+    clientOptionsJSON="#{clientOptions}"
 
   script(src="/packed/inputProduction.js", type="text/javascript")
